--- a/app/scss/_highcharts.scss
+++ b/app/scss/_highcharts.scss
@@ -84,7 +84,8 @@
   .highcharts-yaxis-labels {
     fill: $slate-secondary-5;
     // use this to change the axis label
-    & span:first-child {
+    & span:last-child {
+      transform: translate(10px,0);
       &:after {
         content: "%";
     }
@@ -97,7 +98,7 @@
   }
   
   .highcharts-xaxis-grid .highcharts-grid-line {
-    stroke-width: 0px;
+    stroke-width: 1px;
   }
   
   .highcharts-tick {
@@ -168,7 +169,7 @@
   
   .highcharts-graph {
     fill: none;
-    stroke-width: 3px;
+    stroke-width: 2px;
     stroke-linecap: round;
     stroke-linejoin: round;
   }
@@ -205,7 +206,7 @@
   /* Series options */
   /* Default colors */
   .highcharts-color-0 {
-    fill: $green-primary;
+    fill: white;
     stroke: $green-primary;
   }
   
@@ -265,7 +266,7 @@
   }
   
   .highcharts-point {
-    stroke-width: 0;
+    stroke-width: 1;
   }
   
   .highcharts-dense-data .highcharts-point {
