--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -22,7 +22,7 @@ $breakpoint-lg: 717px;
 
 @import "colors";
 
-.chart-area {
+.chart-area-jobs-stock-market {
   @import "type";
   @import "highcharts";
 
@@ -49,16 +49,29 @@ $breakpoint-lg: 717px;
 
   & .chart-container {
     width: 100%;
-    height: 300px;
+    height: 350px;
     margin-top: -10px;
     @include sm-md-xl {
-      height: 400px;
+      height: 420px;
     }
   }
 
   & .grow-logo {
     width: 214px;
     margin-top: 20px;
+  }
+
+  & .highcharts-axis {
+    & text {
+      font-size: 14px;
+      fill: $slate-secondary-5;
+    }
+  }
+
+  & .highcharts-label {
+    path {
+      stroke: $slate-secondary-5;
+    }
   }
   
 }
